Fix tags posting problem, fix profile picture alignment

--- a/css/profile.css
+++ b/css/profile.css
@@ -4,14 +4,15 @@
 }*/
 
 main .container img.profile-picture {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 200px;
   height: 200px;
   border-radius: 50%;
   -webkit-box-shadow: 3px 12px 54px 1px rgba(0,0,0,0.42);
   -moz-box-shadow: 3px 12px 54px 1px rgba(0,0,0,0.42);
   box-shadow: 3px 12px 54px 1px rgba(0,0,0,0.42);
-  align-self: center;
-  margin: 50px 400px 20px 400px;
 }
 
 main .container .user-info p {
